--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="md:flex hidden items-center space-x-8">
                         <a href="#" class="hover:text-yellow-300 transition-colors">Home</a>
                         <a href="#services" class="hover:text-yellow-300 transition-colors">Services</a>
-                        <a href="#categories" class="hover:text-yellow-300 transition-colors">Categories</a>
+                        <a href="categories.html" class="hover:text-yellow-300 transition-colors">Categories</a>
                         <a href="#about" class="hover:text-yellow-300 transition-colors">About Us</a>
                         <a href="#contact" class="hover:text-yellow-300 transition-colors">Contact</a>
                     </div>
@@ -51,7 +51,7 @@
             <div id="mobileMenu" class="hidden md:hidden bg-blue-800 px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="#" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Home</a>
                 <a href="#services" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Services</a>
-                <a href="#categories" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Categories</a>
+                <a href="categories.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Categories</a>
                 <a href="#about" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">About Us</a>
                 <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Contact</a>
             </div>
@@ -88,7 +88,7 @@
         </section>
     
         <!-- Services Section -->
-        <section class="py-20 mt-12 mb-0 bg-gray-50 opacity-0 transform translate-y-[-50px] animate-fade-in-up">
+        <section class="py-20 mt-12 mb-0 bg-gray-50 opacity-0 transform translate-y-[-50px] animate-fade-in-up" id="services">
             <div class="max-w-6xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Our Services</h2>
                 <p class="mt-4 text-lg text-gray-600">
@@ -363,7 +363,7 @@
                         <ul class="space-y-2">
                             <li><a href="/" class="text-gray-300 hover:text-white">Home</a></li>
                             <li><a href="#services" class="text-gray-300 hover:text-white">Services</a></li>
-                            <li><a href="#categories" class="text-gray-300 hover:text-white">Categories</a></li>
+                            <li><a href="categories.html" class="text-gray-300 hover:text-white">Categories</a></li>
                             <li><a href="#about" class="text-gray-300 hover:text-white">About Us</a></li>
                             <li><a href="#contact" class="text-gray-300 hover:text-white">Contact</a></li>
                         </ul>
@@ -377,7 +377,7 @@
                             <li><a href="/category/electricians" class="text-gray-300 hover:text-white">Electricians</a></li>
                             <li><a href="/category/carpenters" class="text-gray-300 hover:text-white">Carpenters</a></li>
                             <li><a href="/category/painters" class="text-gray-300 hover:text-white">Painters</a></li>
-                            <!-- <li><a href="/category/masons" class="text-gray-300 hover:text-white">Masons</a></li> -->
+                            <li><a href="/category/masons" class="text-gray-300 hover:text-white">Masons</a></li>
                         </ul>
                     </div>
                     
@@ -405,6 +405,6 @@
             </div>
         </footer>
     <!-- Link to External JavaScript File -->
-    <script src="script.js"></script>
+    <script src="/src/script.js"></script>
 </body>
 </html>
