adding workers list pages

--- a/categories.html
+++ b/categories.html
@@ -73,8 +73,8 @@
                     <p>Expert plumbers for all your pipe and fixture needs.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff80bf, #ff6699); box-shadow: 0 0 15px rgba(255, 128, 191, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #66ccff, #3399ff); box-shadow: 0 0 15px rgba(102, 204, 255, 0.7);">Find Plumbers</a>
+                            <a href="category/plumbers.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff80bf, #ff6699); box-shadow: 0 0 15px rgba(255, 128, 191, 0.7);">View Workers</a>
+                            <a href="category/plumbers.html" class="btn-flip back" style="background: linear-gradient(45deg, #66ccff, #3399ff); box-shadow: 0 0 15px rgba(102, 204, 255, 0.7);">Find Plumbers</a>
                         </div>
                     </div>
                 </div>
@@ -85,8 +85,8 @@
                     <p>Skilled electricians for wiring and electrical systems.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Electricians</a>
+                            <a href="category/electricians.html" class="btn-flip front" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">View Workers</a>
+                            <a href="category/electricians.html" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Electricians</a>
                         </div>
                     </div>
                 </div>
@@ -97,8 +97,8 @@
                     <p>Professional carpenters for woodwork and furniture.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">Find Carpenters</a>
+                            <a href="category/carpenters.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">View Workers</a>
+                            <a href="category/carpenters.html" class="btn-flip back" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">Find Carpenters</a>
                         </div>
                     </div>
                 </div>
@@ -109,8 +109,8 @@
                     <p>Experienced painters for interior and exterior painting.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff6666, #ff3333); box-shadow: 0 0 15px rgba(255, 102, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Painters</a>
+                            <a href="category/painters.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff6666, #ff3333); box-shadow: 0 0 15px rgba(255, 102, 102, 0.7);">View Workers</a>
+                            <a href="category/painters.html" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Painters</a>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                     <p>Skilled masons for brickwork and concrete structures.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #999999, #666666); box-shadow: 0 0 15px rgba(153, 153, 153, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #cccccc, #999999); box-shadow: 0 0 15px rgba(204, 204, 204, 0.7);">Find Masons</a>
+                            <a href="category/masons.html" class="btn-flip front" style="background: linear-gradient(45deg, #999999, #666666); box-shadow: 0 0 15px rgba(153, 153, 153, 0.7);">View Workers</a>
+                            <a href="category/masons.html" class="btn-flip back" style="background: linear-gradient(45deg, #cccccc, #999999); box-shadow: 0 0 15px rgba(204, 204, 204, 0.7);">Find Masons</a>
                         </div>
                     </div>
                 </div>
@@ -165,11 +165,11 @@
                     <div>
                         <h3 class="text-lg font-semibold mb-4">Categories</h3>
                         <ul class="space-y-2">
-                            <li><a href="/category/plumbers" class="text-gray-300 hover:text-white">Plumbers</a></li>
-                            <li><a href="/category/electricians" class="text-gray-300 hover:text-white">Electricians</a></li>
-                            <li><a href="/category/carpenters" class="text-gray-300 hover:text-white">Carpenters</a></li>
-                            <li><a href="/category/painters" class="text-gray-300 hover:text-white">Painters</a></li>
-                            <li><a href="/category/masons" class="text-gray-300 hover:text-white">Masons</a></li>
+                            <li><a href="/category/plumbers.html" class="text-gray-300 hover:text-white">Plumbers</a></li>
+                            <li><a href="/category/electricians.html" class="text-gray-300 hover:text-white">Electricians</a></li>
+                            <li><a href="/category/carpenters.html" class="text-gray-300 hover:text-white">Carpenters</a></li>
+                            <li><a href="/category/painters.html" class="text-gray-300 hover:text-white">Painters</a></li>
+                            <li><a href="/category/masons.html" class="text-gray-300 hover:text-white">Masons</a></li>
                         </ul>
                     </div>
                     
