--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Hero Section -->
         <section class="relative h-[500px] flex items-center px-10 md:px-20">
             <!-- Background Image with Overlay -->
-            <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1504307651254-35680f356dfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80')] bg-cover bg-center">
+            <div class="absolute inset-0 bg-[url('../images/contstrunction.png')] bg-cover bg-center">
                 <div class="absolute inset-0 bg-blue-900 opacity-80"></div>
             </div>
         
@@ -205,8 +205,8 @@
                     <p>Expert plumbers for all your pipe and fixture needs.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff80bf, #ff6699); box-shadow: 0 0 15px rgba(255, 128, 191, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #66ccff, #3399ff); box-shadow: 0 0 15px rgba(102, 204, 255, 0.7);">Find Plumbers</a>
+                            <a href="category/plumbers.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff80bf, #ff6699); box-shadow: 0 0 15px rgba(255, 128, 191, 0.7);">View Workers</a>
+                            <a href="category/plumbers.html" class="btn-flip back" style="background: linear-gradient(45deg, #66ccff, #3399ff); box-shadow: 0 0 15px rgba(102, 204, 255, 0.7);">Find Plumbers</a>
                         </div>
                     </div>
                 </div>
@@ -373,11 +373,11 @@
                     <div>
                         <h3 class="text-lg font-semibold mb-4">Categories</h3>
                         <ul class="space-y-2">
-                            <li><a href="/category/plumbers" class="text-gray-300 hover:text-white">Plumbers</a></li>
-                            <li><a href="/category/electricians" class="text-gray-300 hover:text-white">Electricians</a></li>
-                            <li><a href="/category/carpenters" class="text-gray-300 hover:text-white">Carpenters</a></li>
-                            <li><a href="/category/painters" class="text-gray-300 hover:text-white">Painters</a></li>
-                            <li><a href="/category/masons" class="text-gray-300 hover:text-white">Masons</a></li>
+                            <li><a href="/category/plumbers.html" class="text-gray-300 hover:text-white">Plumbers</a></li>
+                            <li><a href="/category/electricians.html" class="text-gray-300 hover:text-white">Electricians</a></li>
+                            <li><a href="/category/carpenters.html" class="text-gray-300 hover:text-white">Carpenters</a></li>
+                            <li><a href="/category/painters.html" class="text-gray-300 hover:text-white">Painters</a></li>
+                            <li><a href="/category/masons.html" class="text-gray-300 hover:text-white">Masons</a></li>
                         </ul>
                     </div>
                     
