--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#" class="hover:text-yellow-300 transition-colors">Home</a>
                         <a href="#services" class="hover:text-yellow-300 transition-colors">Services</a>
                         <a href="categories.html" class="hover:text-yellow-300 transition-colors">Categories</a>
-                        <a href="#about" class="hover:text-yellow-300 transition-colors">About Us</a>
+                        <a href="aboutus.html" class="hover:text-yellow-300 transition-colors">About Us</a>
                         <a href="#contact" class="hover:text-yellow-300 transition-colors">Contact</a>
                     </div>
 
@@ -217,8 +217,8 @@
                     <p>Skilled electricians for wiring and electrical systems.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Electricians</a>
+                            <a href="category/electricians.html" class="btn-flip front" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">View Workers</a>
+                            <a href="category/electricians.html" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Electricians</a>
                         </div>
                     </div>
                 </div>
@@ -229,8 +229,8 @@
                     <p>Professional carpenters for woodwork and furniture.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">Find Carpenters</a>
+                            <a href="category/carpenters.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">View Workers</a>
+                            <a href="category/carpenters.html" class="btn-flip back" style="background: linear-gradient(45deg, #ffcc66, #ffaa33); box-shadow: 0 0 15px rgba(255, 204, 102, 0.7);">Find Carpenters</a>
                         </div>
                     </div>
                 </div>
@@ -241,8 +241,8 @@
                     <p>Experienced painters for interior and exterior painting.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #ff6666, #ff3333); box-shadow: 0 0 15px rgba(255, 102, 102, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Painters</a>
+                            <a href="category/painters.html" class="btn-flip front" style="background: linear-gradient(45deg, #ff6666, #ff3333); box-shadow: 0 0 15px rgba(255, 102, 102, 0.7);">View Workers</a>
+                            <a href="category/painters.html" class="btn-flip back" style="background: linear-gradient(45deg, #ff9966, #ff6633); box-shadow: 0 0 15px rgba(255, 153, 102, 0.7);">Find Painters</a>
                         </div>
                     </div>
                 </div>
@@ -253,8 +253,8 @@
                     <p>Skilled masons for brickwork and concrete structures.</p>
                     <div class="btn-container">
                         <div class="btn-wrapper">
-                            <a href="#" class="btn-flip front" style="background: linear-gradient(45deg, #999999, #666666); box-shadow: 0 0 15px rgba(153, 153, 153, 0.7);">View Workers</a>
-                            <a href="#" class="btn-flip back" style="background: linear-gradient(45deg, #cccccc, #999999); box-shadow: 0 0 15px rgba(204, 204, 204, 0.7);">Find Masons</a>
+                            <a href="category/masons.html" class="btn-flip front" style="background: linear-gradient(45deg, #999999, #666666); box-shadow: 0 0 15px rgba(153, 153, 153, 0.7);">View Workers</a>
+                            <a href="category/masons.html" class="btn-flip back" style="background: linear-gradient(45deg, #cccccc, #999999); box-shadow: 0 0 15px rgba(204, 204, 204, 0.7);">Find Masons</a>
                         </div>
                     </div>
                 </div>
