--- a/aboutus.html
+++ b/aboutus.html
@@ -27,9 +27,9 @@
                     <div class="md:flex hidden items-center space-x-8">
                         <a href="index.html" class="hover:text-yellow-300 transition-colors">Home</a>
                         <a href="index.html" class="hover:text-yellow-300 transition-colors">Services</a>
-                        <a href="#" class="hover:text-yellow-300 transition-colors">Categories</a>
-                        <a href="#about" class="hover:text-yellow-300 transition-colors">About Us</a>
-                        <a href="#contact" class="hover:text-yellow-300 transition-colors">Contact</a>
+                        <a href="categories.html" class="hover:text-yellow-300 transition-colors">Categories</a>
+                        <a href="#" class="hover:text-yellow-300 transition-colors">About Us</a>
+                        <a href="contact.html" class="hover:text-yellow-300 transition-colors">Contact</a>
                     </div>
         
                     <!-- Mobile Menu Button -->
@@ -51,9 +51,9 @@
             <div id="mobileMenu" class="hidden md:hidden bg-blue-800 px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Home</a>
                 <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Services</a>
-                <a href="#" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Categories</a>
-                <a href="#about" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">About Us</a>
-                <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Contact</a>
+                <a href="categories.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Categories</a>
+                <a href="aboutus.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">About Us</a>
+                <a href="contact.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Contact</a>
             </div>
         </nav>
     <!-- BODY -->
@@ -106,10 +106,10 @@
                         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
                         <ul class="space-y-2">
                             <li><a href="index.html" class="text-gray-300 hover:text-white">Home</a></li>
-                            <li><a href="#services" class="text-gray-300 hover:text-white">Services</a></li>
-                            <li><a href="/" class="text-gray-300 hover:text-white">Categories</a></li>
-                            <li><a href="#about" class="text-gray-300 hover:text-white">About Us</a></li>
-                            <li><a href="#contact" class="text-gray-300 hover:text-white">Contact</a></li>
+                            <li><a href="index.html" class="text-gray-300 hover:text-white">Services</a></li>
+                            <li><a href="categories.html" class="text-gray-300 hover:text-white">Categories</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white">About Us</a></li>
+                            <li><a href="contact.html" class="text-gray-300 hover:text-white">Contact</a></li>
                         </ul>
                     </div>
                     
