--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a href="#services" class="hover:text-yellow-300 transition-colors">Services</a>
                         <a href="categories.html" class="hover:text-yellow-300 transition-colors">Categories</a>
                         <a href="aboutus.html" class="hover:text-yellow-300 transition-colors">About Us</a>
-                        <a href="#contact" class="hover:text-yellow-300 transition-colors">Contact</a>
+                        <a href="contact.html" class="hover:text-yellow-300 transition-colors">Contact</a>
                     </div>
 
                     <!-- Mobile Menu Button -->
@@ -52,8 +52,8 @@
                 <a href="#" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Home</a>
                 <a href="#services" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Services</a>
                 <a href="categories.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Categories</a>
-                <a href="#about" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">About Us</a>
-                <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Contact</a>
+                <a href="aboutus.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">About Us</a>
+                <a href="contact.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Contact</a>
             </div>
         </nav>
     <!-- BODY -->
@@ -321,14 +321,16 @@
                     <p class="mt-3 text-gray-200">
                         Browse our categories and connect with skilled workers today.
                     </p>
+                    <a href="categories.html">
                     <button class="mt-5 w-1/3 bg-yellow-400 text-black font-semibold px-5 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
                         Get Started Now
                     </button>
+                    </a>
                 </div>
         
                 <!-- Right Image -->
                 <div class="w-full md:w-1/3 h-full">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="CTA Image" class="w-full h-full object-cover">
+                    <img src="/images/construcyionfooter.jpg" alt="CTA Image" class="w-full h-full object-cover">
                 </div>
             </div>
         </section>
@@ -364,8 +366,8 @@
                             <li><a href="/" class="text-gray-300 hover:text-white">Home</a></li>
                             <li><a href="#services" class="text-gray-300 hover:text-white">Services</a></li>
                             <li><a href="categories.html" class="text-gray-300 hover:text-white">Categories</a></li>
-                            <li><a href="#about" class="text-gray-300 hover:text-white">About Us</a></li>
-                            <li><a href="#contact" class="text-gray-300 hover:text-white">Contact</a></li>
+                            <li><a href="aboutus.html" class="text-gray-300 hover:text-white">About Us</a></li>
+                            <li><a href="contact.html" class="text-gray-300 hover:text-white">Contact</a></li>
                         </ul>
                     </div>
                     
@@ -389,7 +391,7 @@
                                 📍 <span class="text-gray-300">Muzaffarpur, Bihar</span>
                             </li>
                             <li class="flex items-center space-x-2">
-                                📞 <span class="text-gray-300">+91 9999999999</span>
+                                📞 <span class="text-gray-300">+91 9934336484</span>
                             </li>
                             <li class="flex items-center space-x-2">
                                 ✉️ <span class="text-gray-300">info@bmjunction.com</span>
